--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <td>+0.2045</td>
         </tr>  
     </table> </center> <br/>
-    <mark><h3>Factors influencing global temperature</h3></mark>
+    <h3> <mark>Factors influencing global temperature </mark> </h3>
     <ul>
         <li>Greenhouse gases.</li>
         <li>Burning coal, oil and gas.</li>
